# scratch_projects

./: .gitignore  AmazonPrimeNowDeliveryTimes.py  LICENSE  README.md  main.py  pyproject.toml
featuretools/: Testing Featuretools.ipynb
kaggle/customer_churn/: README.md
kaggle/customer_churn/eda/: customer+data+exploration.ipynb
ml prototypes/: hyperparameter optimization.py
